--- a/index.html
+++ b/index.html
@@ -29,7 +29,77 @@
   </head>
   <body>
     <main>
-      <div class="card"></div>
+      <div class="card">
+        <h1><span class="card-star"></span> FAQs</h1>
+        <div class="card__container">
+          <div class="card__container-heading">
+            <h5 class="card__container-headingText">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam,
+              quas.
+            </h5>
+            <span class="card__container-headingButton"></span>
+          </div>
+          <p class="card__container-information">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+            dolore minus ipsa maxime hic accusamus aspernatur eaque ipsam non
+            illum? Repellat enim ipsum inventore perferendis. Suscipit voluptas
+            recusandae, ab quia veniam debitis id enim quasi, qui adipisci
+            consequuntur repellat praesentium dicta, quae velit modi? Debitis,
+            rerum illum. Harum, quo in.
+          </p>
+        </div>
+        <div class="card__container">
+          <div class="card__container-heading">
+            <h5 class="card__container-headingText">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam,
+              quas.
+            </h5>
+            <span class="card__container-headingButton"></span>
+          </div>
+          <p class="card__container-information">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+            dolore minus ipsa maxime hic accusamus aspernatur eaque ipsam non
+            illum? Repellat enim ipsum inventore perferendis. Suscipit voluptas
+            recusandae, ab quia veniam debitis id enim quasi, qui adipisci
+            consequuntur repellat praesentium dicta, quae velit modi? Debitis,
+            rerum illum. Harum, quo in.
+          </p>
+        </div>
+        <div class="card__container">
+          <div class="card__container-heading">
+            <h5 class="card__container-headingText">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam,
+              quas.
+            </h5>
+            <span class="card__container-headingButton"></span>
+          </div>
+          <p class="card__container-information">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+            dolore minus ipsa maxime hic accusamus aspernatur eaque ipsam non
+            illum? Repellat enim ipsum inventore perferendis. Suscipit voluptas
+            recusandae, ab quia veniam debitis id enim quasi, qui adipisci
+            consequuntur repellat praesentium dicta, quae velit modi? Debitis,
+            rerum illum. Harum, quo in.
+          </p>
+        </div>
+        <div class="card__container">
+          <div class="card__container-heading">
+            <h5 class="card__container-headingText">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam,
+              quas.
+            </h5>
+            <span class="card__container-headingButton"></span>
+          </div>
+          <p class="card__container-information">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
+            dolore minus ipsa maxime hic accusamus aspernatur eaque ipsam non
+            illum? Repellat enim ipsum inventore perferendis. Suscipit voluptas
+            recusandae, ab quia veniam debitis id enim quasi, qui adipisci
+            consequuntur repellat praesentium dicta, quae velit modi? Debitis,
+            rerum illum. Harum, quo in.
+          </p>
+        </div>
+      </div>
     </main>
 
     <div class="attribution">
