--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       .attribution {
         font-size: 11px;
         text-align: center;
+        margin-bottom: 10px;
       }
       .attribution a {
         color: hsl(228, 45%, 44%);
@@ -101,7 +102,6 @@
         </div>
       </div>
     </main>
-
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
