--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="card">
         <h1><span class="card-star"></span> FAQs</h1>
         <div class="card__container">
-          <div class="card__container-heading">
+          <div class="card__container-heading" tabindex="1">
             <h5 class="card__container-headingText">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam,
               quas.
@@ -50,7 +50,7 @@
           </p>
         </div>
         <div class="card__container">
-          <div class="card__container-heading">
+          <div class="card__container-heading" tabindex="1">
             <h5 class="card__container-headingText">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam,
               quas.
@@ -67,7 +67,7 @@
           </p>
         </div>
         <div class="card__container">
-          <div class="card__container-heading">
+          <div class="card__container-heading" tabindex="1">
             <h5 class="card__container-headingText">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam,
               quas.
@@ -84,7 +84,7 @@
           </p>
         </div>
         <div class="card__container">
-          <div class="card__container-heading">
+          <div class="card__container-heading" tabindex="1">
             <h5 class="card__container-headingText">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam,
               quas.
